[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 360.0
margin_bottom = 360.0

[node name="Button" type="Button" parent="CanvasLayer/Control"]
margin_left = 155.0
margin_top = 142.0
margin_right = 235.0
margin_bottom = 165.0
text = "START"

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_Button_pressed"]
